--- a/_posts/2020-08-27-gsoc2020.md
+++ b/_posts/2020-08-27-gsoc2020.md
@@ -3,12 +3,12 @@ layout: post
 title: Recapping Google Summer of Code 2020
 ---
 ## Summary
-[Rdkit](https://github.com/rdkit) is a cheminformatics and machine learning library. [MongoDB](https://www.mongodb.com/) is a NoSQL, document-oriented database system. This summer I built a Python package called `mongordkit` that marries the two, using rdkit to do chemistry and Mongo to support heterogeneous data and fast similarity and substructure search.
+[Rdkit](https://github.com/rdkit) is a cheminformatics and machine learning library. [MongoDB](https://www.mongodb.com/) is a NoSQL, document-oriented database system. This summer I built a Python package called mongordkit that marries the two, using rdkit to do chemistry and Mongo to support heterogeneous data and fast similarity and substructure search.
 
 This post reports the work done, some things to note, and next steps. If you're interested in getting right to the code, reading up on background, or learning more about Google Summer of Code, check out the following links:
 
 ## Essential References
-- [GitHub Repository](https://github.com/rdkit/mongo-rdkit) - cloning this repository gets you `mongordkit` and accompanying documentation. Check out the README for installation and testing details. If you want to start using the package or adding to it, this is the place to start.
+- [GitHub Repository](https://github.com/rdkit/mongo-rdkit) - cloning this repository gets you mongordkit and accompanying documentation. Check out the README for installation and testing details. If you want to start using the package or adding to it, this is the place to start.
 - Blog posts by [Matt Swain](https://matt-swain.com/blog/2014-06-03-chemical-similarity-search-in-mongodb) and [ChEMBL](http://chembl.blogspot.com/2015/08/lsh-based-similarity-search-in-mongodb.html) - my work on similarity search implements their approaches. They deserve a shoutout and this is great background reading.
 - [Project Proposal](https://drive.google.com/file/d/1hZyP3dMqYqqhio_pvqgoZvQOuCOSCMV0/view?usp=sharing) - this is the original proposal for my GSoC project. This could be of great help if you plan on pursuing a GSoC summer of your own.
 
@@ -28,7 +28,7 @@ items already in a database.
 ### What's Been Done
 <div class="message">tl;dr: all relevant planned features implemented.</div>
 
-The Python package is called `mongordkit` and has two user-facing modules called `Database` and `Search`. Each is divided into submodules based on functionality:
+The Python package is called mongordkit and has two user-facing modules called `Database` and `Search`. Each is divided into submodules based on functionality:
 ```python
 mongordkit |
     Database |
@@ -96,4 +96,4 @@ Optimization:
 2. Improving write times, which could be a barrier to usage.
 
 ### Conclusion
-This was a deeply satisfying project. Certainly, it was a great experience to do end-to-end software development; we rarely cover CI/CD, documentation, and configuration headaches in school. I'm most grateful to Marco Stenta, Peter Gedeck, and Greg Landrum for their guidance, and Google for their financial and organizational support. But most rewarding—and I guess this is the power of open-source development—is that others will be able to use and build on what I have made. Cheers to a great summer. 
+This was a deeply satisfying project. Certainly, it was a great experience to do end-to-end software development; we rarely cover CI/CD, documentation, and configuration headaches in school. I'm most grateful to Marco Stenta, Peter Gedeck, and Greg Landrum for their guidance, and Google for their financial and organizational support. But most rewarding—and I guess this is the power of open-source development—is that others will be able to use and build on what I have made. Cheers to a great summer.
